--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         textarea {
             resize: vertical;
         }
+        .max-w-4xl {
+            max-width: 80rem;
+        }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800 flex items-center justify-center min-h-screen p-4">
