--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             resize: vertical;
         }
         .max-w-4xl {
-            max-width: 80rem;
+            max-width: 80rem !important;
         }
     </style>
 </head>
